<resources>
    <string name="app_name">Calculator</string>
    <string name="textview">TextView</string>
    <string name="ac">AC</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_equal_">=</string>
    <string name="_minus_">-</string>
    <string name="_plus_">+</string>
    <string name="_divide_">/</string>
    <string name="_multiply_">*</string>
    <string name="_percent_">%</string>
    <string name="_addOrSubtract_">+/-</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_00">0</string>
    <string name="_decimal_">.</string>
    <string name="_0">0</string>
</resources>